lab1/Test/L1-A-13-54.output
Error Type B at Line 1
Error Type A at Line 3
Error Type B at Line 9
Error Type B at Line 13
Error Type B at Line 14
Error Type B at Line 16
Error Type A at Line 17
Error Type A at Line 25
Error Type B at Line 26
